# agent-context-score

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  highstar.yaml  pyproject.toml  setup.py
examples/bad/: AGENTS.md
examples/good/: AGENTS.md
releases/: v0.1.0.md  v0.1.1.md
src/agent_context_score/: __init__.py  cli.py
tests/: test_cli.py
