[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-score"
version = "0.1.1"
description = "Score AI context instruction files for clarity, safety, and anti-abuse risk."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexzhu0" }]
keywords = ["ai-tools", "agent-instructions", "cli", "safety", "developer-tools", "lint"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
agent-context-score = "agent_context_score.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
